score picture page

--- a/app/views/teachers/my_score.html.erb
+++ b/app/views/teachers/my_score.html.erb
@@ -1,3 +1,7 @@
+<%= content_for :script do %>
+  <%= javascript_include_tag "_teacher_page" %>
+<%end%>
+
 <div class="main-content">
   <%= render "left_bar" %>
 
@@ -10,26 +14,26 @@
         <li role="presentation"><a href="javascript:void(0)">第三步 选择课程</a></li>
       </ul>
 	</div>
-	<%= form_tag select_grade_teachers_path, method: :post do %>
+	<%= form_tag select_grade_teachers_path, method: :post, id: "scoreSearch" do %>
 		<% @academies.each_with_index do |academy,index| %>
 		  <% if index%4 == 0 %>
 		  <div class="condition-row">
 		  <% end %>
 			<div class="col-sm-3">
-			  <%= radio_button_tag "academy_id",academy[0], academy[0] == params[:academy_id] %>
-			  <lable for="academy_id_<%= index + 1 %>"><%= academy[1] %></lable>
+			  <%= radio_button_tag "academy_id", academy[0], academy[0].to_s == params[:academy_id] %>
+			  <label for="academy_id_<%= index + 1 %>"><%= academy[1] %></label>
 			</div>
 		  <% if index%4 == 3 %>
 		  </div>
 		  <% end %>
 		<% end %>
-		
+
 		<% if @academies.length % 4 != 3 %>
 		   </div>
 		<% end %>
 
 		<div class="search-score-btn">
-		  <%= submit_tag "下一步", class: "btn btn-primary btn-lg" %>
+		  <%= submit_tag "下一步", class: "btn btn-primary btn-lg", disabled: params[:academy_id].blank? , id: "nextStep"%>
 		  <a href="<%= root_path%>" class="btn btn-danger btn-lg">返回首页</a>
 		</div>
 	<% end %>
