--- a/app/views/teachers/show_score.html.erb
+++ b/app/views/teachers/show_score.html.erb
@@ -20,7 +20,7 @@
 	</div>
 
 	<div class="score-percentage">
-	  <div class="sub-title"><span class="badge">2</span>每个班每门课的平均分统计图</div>
+	  <div class="sub-title"><span class="badge">2</span>每个班xx课程的分数段分布概率统计图</div>
 
 	  <div class="row">
 	  	<div class="col-sm-4 score-percentage-picture" style="height: 250px;"></div>
@@ -36,7 +36,7 @@
 	</div>
 
 	<div class="search-score-btn">
-		<button type="button" class="btn btn-primary btn-lg">到处EXCEL</button>
+		<button type="button" class="btn btn-primary btn-lg">导出EXCEL</button>
 		<button type="button" class="btn btn-danger btn-lg">进入下一页</button>
 	</div>
   </div>
