--- a/app/views/teachers/my_account.html.erb
+++ b/app/views/teachers/my_account.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :script do %>
-  <%= javascript_include_tag "_teacher_page" %>
+  <%= javascript_include_tag "_teacher_page",'data-turbolinks-track' => true  %>
 <%end%>
 
 <div class="main-content">
